// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package de.rki.coronawarnapp.server.protocols.internal;


message AppFeatures {
  repeated AppFeature app_features = 1;
}

message AppFeature {
  string label = 1;
  int32 value = 2;
}
