// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package de.rki.coronawarnapp.server.protocols.internal.evreg;


import "internal/evreg/check_in.proto";

message CheckInExport {
  repeated CheckIn checkIns = 1;
}

message CheckInExportOption1 {
  repeated CheckInOption1 checkIns = 1;
}

message CheckInExportOption2 {
  repeated CheckInOption2 checkIns = 1;
}

message CheckInExportOption3 {
  repeated CheckInOption3 checkIns = 1;
}